Fix header spacing and alignment to center, even left/right

--- a/docs/style.less
+++ b/docs/style.less
@@ -147,7 +147,7 @@ header {
 
     #title_bar {
         display: flex;
-        align-items: baseline;
+        align-items: center;
         justify-content: space-between;
 
         padding: 1rem 1% 0 1%;
@@ -158,8 +158,6 @@ header {
 
         #icons {
             border: solid red @border_thickness_test;
-            /*margin-left: 30px; BCS todo*/
-            margin-right: 30px;
             font-size: 0.8em;
             vertical-align: top;
 
@@ -184,8 +182,6 @@ header {
         #title {
             font-size: 2em;
             margin: 0;
-            margin-bottom: 0px;
-            margin-right: 2%;
             font-weight: normal;
 
             span.hashtag_style {
